--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="normalize.css">
+    <title>Taller Franco</title>
 </head>
 <body>
-    <h1>Taller sistemas de inyecciones franco</h1>
-    <h2></h2>
+    <header id="cabecera1">    
+        <h1 class="titulo">Taller sistemas de inyecciones franco</h1>
+    </header>
+    <div id="blateral">
+        <nav>
+            <a href="#">Personal</a>
+            <a href="#">Inventario</a>
+            <a href="#">Calendario - Citas</a>
+            <a href="#">Catalogos</a>
+            <a href="#">Precios</a>
+            <a href="#">Cerrar sesion</a>
+        </nav>
+    </div>
+    <div id="cont">
+        <img src="./img/portada.jpg" alt="">
+    </div>
+    <div id="foot">
+
+    </div>
 </body>
 </html>
